# MANAGED BY VAPOR. EDIT Workspace.vapor.toml OR THE ROLE-SPECIFIC CONTENT MANIFEST, THEN RUN `vapor-sdk workspace sync`.
[package]
name = "hello-world-on-steroids-game"
version.workspace = true
edition.workspace = true
# END MANAGED BY VAPOR.

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
terminal-engine = { path = "../terminal_engine" }
